crates/aimee_app/src/snapshots/aimee_app__operation__tests__fs_undo_file_created.snap
---
source: crates/aimee_app/src/operation.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/new_file.txt"
  status="created"
  total_lines="3"
><![CDATA[New file content
Line 2
Line 3]]>
</file_undo>
